# SAMD21G-E_Example_Project

./: LICENSE  README.md
Example_FW/: .gitignore  CMakeLists.txt  CMakeListsPIO.txt  platformio.ini
Example_FW/src/: main.cpp  sensorhub_settings.hpp
Example_FW/test/: CMakeLists.txt
